# IoT-Object-Detection-and-Visualization-System

./: App.jsx  README.md  app.js  erf.txt  index.html  intento.jsx  main.py  pedo.js  prueba-sensores.js  sketch.ino  styles.css
Intento/src/: erf.txt  prueba-sensores.js
backend/: Dockerfile  README.md  main.py  models.py  pyproject.toml  yolo.py
frontend/: app.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  p10415.cpp  pedo.js  sijala.js
