[project]
name = "backend"
version = "0.1.0"
description = "Backend of IoT project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "supabase>=2.24.0",
    "ultralytics>=8.3.232",
    "uvicorn>=0.38.0",
]
